# opt

./: .flake8  .gitignore  README.md  pyproject.toml
into-ml-webopt/: README.md  pyproject.toml
into-ml-webopt/src/: common.py
into-ml-webopt/src/Chap2/: main.py
into-ml-webopt/src/Chap3/: main.py
into-ml-webopt/src/Chap5/: main.py
into-ml-webopt/src/Chap6/: main.py
src/: opt.py  opt_classmates.py  opt_intro.py  opt_seizou.py  opt_send_coupon.py  opt_send_coupon_model2.py  opt_send_coupon_model3_cpa.py  opt_send_coupon_model3_fairness.py  recommendation.py  vrp.py
src/api/: api.py  front.py  solver.py
tests/: test_classmates.py
the-py-optbook/: pyproject.toml
the-py-optbook/src/: opt_send_coupon_model1.py  opt_send_coupon_model3_cpa.py  vrp.py
the-py-optbook/src/api/: problem.py
